add support for jpackage